Implemented (untested) single-channel TCP

--- a/notes/2023-08-05.md
+++ b/notes/2023-08-05.md
@@ -10,7 +10,7 @@
 
 We are going to implement a general `reliable_send` / `reliable_recv` framework such that every node has access to this API relative to every other node in the network.
 
-In our applicaiton code, we just need to switch `msg_send` and `msg_recv` out for `reliable_send` and `reliable_recv`, respectively, in the handlers / dispatchers.
+In our application code, we just need to switch `msg_send` and `msg_recv` out for `reliable_send` and `reliable_recv`, respectively, in the handlers / dispatchers.
 
 ### Any Node
 
